apps/events/environments/manifest.yaml
---
# Source: homelab/charts/events/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events
  labels:
    helm.sh/chart: events-0.1.9
    app.kubernetes.io/name: events
    app.kubernetes.io/instance: events
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: events
    app.kubernetes.io/instance: events
---
# Source: homelab/charts/events/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events
  labels:
    helm.sh/chart: events-0.1.9
    app.kubernetes.io/name: events
    app.kubernetes.io/instance: events
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: events
      app.kubernetes.io/instance: events
  template:
    metadata:
      labels:
        helm.sh/chart: events-0.1.9
        app.kubernetes.io/name: events
        app.kubernetes.io/instance: events
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: events
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: events
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          image: "ghcr.io/kdwils/events:sha-2cc6bc04fd0473409c3dc99fad12ba34f8c952a6"
          imagePullPolicy: IfNotPresent
          args:
            - --config=/app/config.yaml
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /data
              name: pvc-events-data-pvc
              readOnly: false
            - mountPath: /app/config.yaml
              name: configmap-config
              readOnly: true
      volumes:
        - name: pvc-events-data-pvc
          persistentVolumeClaim:
            claimName: events-data-pvc
        - configMap:
            name: config
          name: configmap-config
---
# Source: homelab/charts/events/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: events
  labels:
    helm.sh/chart: events-0.1.9
    app.kubernetes.io/name: events
    app.kubernetes.io/instance: events
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "events.int.kyledev.co"
    - "events.ts.kyldev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: events
        port: 8080
